// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`microsoft-foundry:resource/create - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use this skill to work with Microsoft Foundry (Azure AI Foundry): deploy AI models from catalog, build RAG applications with knowledge indexes, create and evaluate AI agents, manage RBAC permissions and role assignments, manage quotas and capacity, create Foundry resources.
USE FOR: Microsoft Foundry, AI Foundry, deploy model, model catalog, RAG, knowledge index, create agent, evaluate agent, agent monitoring, create Foundry project, new Foundry project, set up Foundry, onboard to Foundry, provision Foundry infrastructure, create Foundry resource, create AI Services, multi-service resource, AIServices kind, register resource provider, enable Cognitive Services, setup AI Services account, create resource group for Foundry, RBAC, role assignment, managed identity, service principal, permissions, quota, capacity, TPM, deployment failure, QuotaExceeded.
DO NOT USE FOR: Azure Functions (use azure-functions), App Service (use azure-create-app), generic Azure resource creation (use azure-create-app).
",
  "extractedKeywords": [
    "account",
    "agent",
    "agents",
    "aiservices",
    "applications",
    "assignment",
    "assignments",
    "authentication",
    "azure",
    "azure-create-app",
    "azure-functions",
    "build",
    "capacity",
    "catalog",
    "cli",
    "cognitive",
    "create",
    "creation",
    "deploy",
    "deployment",
    "diagnostic",
    "enable",
    "evaluate",
    "failure",
    "foundry",
    "from",
    "function",
    "functions",
    "generic",
    "group",
    "identity",
    "index",
    "indexes",
    "infrastructure",
    "kind",
    "knowledge",
    "manage",
    "managed",
    "mcp",
    "microsoft",
    "model",
    "models",
    "monitor",
    "monitoring",
    "multi-service",
    "onboard",
    "permissions",
    "principal",
    "project",
    "provider",
    "provision",
    "quota",
    "quotaexceeded",
    "quotas",
    "rbac",
    "register",
    "resource",
    "resources",
    "role",
    "service",
    "services",
    "setup",
    "skill",
    "this",
    "with",
    "work",
  ],
}
`;

exports[`microsoft-foundry:resource/create - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "account",
  "agent",
  "agents",
  "aiservices",
  "applications",
  "assignment",
  "assignments",
  "authentication",
  "azure",
  "azure-create-app",
  "azure-functions",
  "build",
  "capacity",
  "catalog",
  "cli",
  "cognitive",
  "create",
  "creation",
  "deploy",
  "deployment",
  "diagnostic",
  "enable",
  "evaluate",
  "failure",
  "foundry",
  "from",
  "function",
  "functions",
  "generic",
  "group",
  "identity",
  "index",
  "indexes",
  "infrastructure",
  "kind",
  "knowledge",
  "manage",
  "managed",
  "mcp",
  "microsoft",
  "model",
  "models",
  "monitor",
  "monitoring",
  "multi-service",
  "onboard",
  "permissions",
  "principal",
  "project",
  "provider",
  "provision",
  "quota",
  "quotaexceeded",
  "quotas",
  "rbac",
  "register",
  "resource",
  "resources",
  "role",
  "service",
  "services",
  "setup",
  "skill",
  "this",
  "with",
  "work",
]
`;
